7.x-1.13.6
----------
 - #2034 Added language selectors on 'chosen_jquery_selector' configuration.
 - #2018 Additional test/devops improvements needed for deployment. See #2012, #2014, #2015 and #2016 for specifics.

7.x-1.13.5
----------
 - #2003 Fix dkan_bueditor_markdown_install(), which was using a variable before it was initialized.
 - #2003 Fix to dkan_update_7016, which assumed the bueditor ID was always '5' and failed when it was not.
 - #2003 Fix dkan_topics_field_formatter_view(), which does not check if a term exists before calling it by tid.
 - #2003 Make Harvest tests clean up after themselves more completely (resources, other nodes were not being cleared).
 - #2003 Fix issues with registering/deregistering and rolling back default content migrations on install/uninstall.
 - #2003 Fix dkan_migrate_base warning: wrong type supplied to foreach.
 - #1963 Allow Behat dkanExtension to handle custom fields via devel generate
 - #1938 Allow skipping of features test via config
 - #1970 DevOps: Automatically populate required fields when running behat tests.

7.x-1.13.4
----------
 - #1983 Apply services security update 3.20 for DRUPAL-SA-CONTRIB-2017-054
 - #1877 Fix broken update that tries to migrate fields that may not exist (primarily due to Federal Extras upgrade)
 - #1960 Update field_group_table to 1.6
 - #1950 Update modules: chosen to 2.1, context to 3.7, date to 2.10, diff to 3.3, double_field to 2.5, entityreference to 1.4, menu_badges to 1.3, module_filter to 2.1, panels to 3.9, panopoly_widgets to 1.45, panopoly_images to 1.45, rules to 2.10, roleassign to 1.2, search_api to 1.21, search_api_db to 1.6, simple_gmap to 1.4, token to 1.7, uuid to 1.0, views_bulk_operations to 3.4, workbench_email to 3.12, drafty to 1.0-beta4, file_entity to 2.2, media to 2.8, media_youtube to 3.4, menu_token to 1.0-beta7, views to 3.16, field_group_table to 1.6, radix to 3.6 and file_resup to revision 6cf030c.
 - #1965 Update Drupal to 7.56.